# One-simple-trick-to-fix-your-bayesian-neural-network

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  Regression.ipynb  TODO.md  ece.py  get_results.py  get_stats.py  job.sh  make_plots.py  pyproject.toml  run.sh  run_all.sh  run_experiments.sh  run_one.sh  run_plots.sh  to_table.py  transform.py
configs/: 00_basic_config.yaml  base_config.yaml
configs/MNIST/: ConvFNN.yaml  FCCN.yaml  FCNN.yaml  LeNet.yaml  LeNetBayesian.yaml  LogisticRegression.yaml  MLEClassify.yaml  SeparableFCN.yaml
configs/activation/: ELU.yaml  LeakyReLU.yaml  LeakyReLU_05.yaml  ReLU.yaml  SiLU.yaml  Sigmoid.yaml  SoftPlus.yaml  Tanh.yaml
configs/bayesian/: metrics_regression.yaml
configs/metrics/: classification.yaml  regression.yaml
notebooks/: MNIST_Bayesian_Training.ipynb  bananas-vis.ipynb  models.py
pyro_experiments/: 00_LeNet.py  00_Regression.py  01_model.py  02_inference.py  03_SVI_p1.py  03_SVI_p2.py  run_classification.py  run_regression.py
pyro_experiments/0_2_1/: MNIST_Bayesian_Training.py  training.py  utils.py
pyro_experiments/tutorials/: 01_model.py  02_inference.py  03_SVI_p1.py  03_SVI_p2.py  11_bayesian_regression.py
scripts/: bayesian_experiments.sh  bayesian_train.py  docker.sh  eval_weights.py  eval_weights.sh  evaluate_weights.sh  evaluate_weights_1d.py  evaluate_weights_1d.sh  evaluate_weights_2d.py  experiment.sh  generate_plots.sh  point_estimate_experiments.sh  train.py  utils.sh
scripts/pyro/: model.py
src/: data.py  module.py  train.py  visualization.py
(+130 files in other folders)
